// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inference: type-level rows > Record type polymorphism \\r:Row -> { foo: Num | r} 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
      "Type ~~ ?1",
    ],
    "term": "(λ(r: Row) -> Schema [ foo: Num | r ] : Π(r: Row) -> Type)",
    "type": "Π(r: Row) -> (closure: Type -| Γ: r)",
  },
}
`;

exports[`Inference: type-level rows > Record value extension \\r -> { foo: Num | r} 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ ?2",
      "?1 ~~ Schema [ | ?3 ]",
    ],
    "term": "(λ(r: (?1 :: Type)) -> Struct [ foo: Num | r ] : Π(r: (?1 :: Type)) ->
  Schema [ foo: Type | (?3 :: Row) ])",
    "type": "Π(r: ?1) -> (closure: Schema [ foo: Type | (?3 :: Row) ] -| Γ: r)",
  },
}
`;

exports[`Inference: type-level rows > Row extension: [x: Num, y: String] 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ ?2",
      "Type ~~ ?1",
    ],
    "term": "[ y: String, x: Num ]",
    "type": "Row",
  },
}
`;
